cleaned up code

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_ENDPOINT = "http://localhost:8080"
+REACT_APP_GAUTH_CLIENT_ID = "214628435307-btgenci9bn7cc4qv7bt14gl5ul56te5d.apps.googleusercontent.com"
